--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,3 +22,9 @@ body {
       transparent,
       rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
+
+html,
+body {
+  font-family: "Barlow";
+  scroll-behavior: smooth;
+}
